--- a/student-hub.html
+++ b/student-hub.html
@@ -109,6 +109,13 @@
               <button id="btn-attendance" class="btn btn-primary" style="width:100%">🙋‍♂️ I'm Here!</button>
               <p id="attendance-status" class="helper-text" style="font-size:0.75rem; min-height:1rem;"></p>
             </div>
+<div class="card">
+              <div class="card-header">Self Training</div>
+              <p class="helper-text">Sharpen your skills between missions.</p>
+              <div id="training-buttons-container" style="display:flex; flex-direction:column; gap:0.5rem; margin-top:0.5rem;">
+                <p class="helper-text">Loading...</p>
+              </div>
+            </div>
           </div>
 
           <div class="card" style="margin-top: 1rem;">
