--- a/teacher.html
+++ b/teacher.html
@@ -144,6 +144,27 @@
           </section>
 
           <section class="dashboard-card">
+            <div class="card">
+              <div class="card-header">Self Training Links</div>
+              <p class="helper-text">Set the Blooket/Quiz links here.</p>
+              <form id="training-links-form">
+                <div class="dashboard-grid">
+                  <div class="form-field">
+                    <label>P5 Links</label>
+                    <input id="link-p5-english" type="url" placeholder="P5 English URL" />
+                    <input id="link-p5-math" type="url" placeholder="P5 Math URL" />
+                  </div>
+                  <div class="form-field">
+                    <label>P6 Links</label>
+                    <input id="link-p6-english" type="url" placeholder="P6 English URL" />
+                    <input id="link-p6-math" type="url" placeholder="P6 Math URL" />
+                  </div>
+                </div>
+                <button type="submit" class="btn btn-primary">Save Links</button>
+              </form>
+            </div>
+          </section>
+<section class="dashboard-card">
             <div class="card-header">Announcements &amp; Homework</div>
             <p class="card-subtitle">Target announcements and homework by level and subject.</p>
 
