--- a/student-hub.html
+++ b/student-hub.html
@@ -91,7 +91,7 @@
               
               <div style="margin-top:1.5rem;">
                 <p class="helper-text">Join live lesson:</p>
-                <a href="https://us06web.zoom.us/j/9900999009?pwd=4p3nEzSTnskpvfcIdaQrgRm7yfhrng.1" target="_blank" class="btn btn-ghost" style="width:100%;">Zoom Room</a>
+                <a href="https://us06web.zoom.us/j/9900999009?pwd=4p3nEzSTnskpvfcIdaQrgRm7yfhrng.1" target="_blank" class="btn btn-secondary" style="width:100%;">Zoom Room</a>
               </div>
             </div>
             
