--- a/student-hub.html
+++ b/student-hub.html
@@ -174,9 +174,7 @@
         <button class="btn btn-ghost btn-small" onclick="closeMission()">❌ Close</button>
       </div>
       <div class="mission-frame-container">
-        <iframe id="mission-frame" src="" frameborder="0" 
-          sandbox="allow-forms allow-scripts allow-same-origin allow-modals">
-        </iframe>
+        <iframe id="mission-frame" src="" frameborder="0"></iframe>
       </div>
     </div>
 
